hphp/hack/test/sound_dynamic/typing/targeted_pessimisation/assign.php.exp
# Original file

     1	<?hh
     2	
     3	<<__SupportDynamicType>>
     4	class Box<T> {
     5	  public function __construct(private T $x) {}
     6	  public function set(T $y): void {
     7	    $this->x = $y;
     8	  }
     9	}


# Original errors

File "assign.php", line 6, characters 19-21:
Method  `set` in class `Box` is not dynamically callable. (Typing[4402])
  File "assign.php", line 7, characters 12-12:
  Cannot write to property `x` through dynamic type because private property in `Box` does not have an enforceable type
  File "assign.php", line 5, characters 39-39:
  Property `x` has type `T`


# Pessimisation log

pessimise:	prop,assign.php,5,$x
pessimise:	prop,assign.php,5,$x


# Pessimised file

     1	<?hh
     2	
     3	<<__SupportDynamicType>>
     4	class Box<T> {
     5	  public function __construct(private ~T $x) {}
     6	  public function set(T $y): void {
     7	    $this->x = $y;
     8	  }
     9	}
    10	


# Errors after pessimisation

No errors
